--- a/global.style.css
+++ b/global.style.css
@@ -3,44 +3,32 @@ body {
   --custom-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   --custom-bg-color: #101010;
-  --custom-panel-color: #222;
   --custom-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.8);
   --custom-color: #000000;
   --custom-color-brand: #FFEB8A;
   --custom-color-secondary: #666;
   --custom-border: 1px solid lightgray;
-  --custom-border-radius: 5px;
   --custom-spacing: 5px;
 
   padding: 0;
   margin: 0;
-  background-color: var(--custom-bg-color);
 }
 
 * {
   box-sizing: border-box;
 }
 
-html,
-body,
-#__next {
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
-}
 
 /* Grid */
 
 .container {
   width: 90%;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 @media only screen and (min-width: 60em) {
   /* 960px */
   .container {
-    width: 795%;
+    width: 100%;
     max-width: 60rem;
   }
 }
@@ -68,21 +56,13 @@ label {
   font-size: 0.8rem;
 }
 
-input {
+input, textarea {
   width: 100%;
   border-radius: 5px;
   border: var(--custom-border);
   padding: 15px 15px;
   font-size: 1rem;
-}
-
-textarea {
-  width: 100%;
   font-family: inherit;
-  border-radius: 5px;
-  border: var(--custom-border);
-  padding: 15px 15px;
-  font-size: 1rem;
 }
 
 input[disabled] {
@@ -125,9 +105,6 @@ input[disabled] {
   font-size: 0.8rem;
   font-weight: 300;
 }
-.text-right {
-  text-align: right;
-}
 .font-light {
   font-weight: 300;
 }
@@ -147,7 +124,6 @@ button,
   border-radius: var(--custom-border-radius);
   padding: 0.5rem 1rem;
   cursor: pointer;
-  text-align: center;
   font-size: 1rem;
   padding: 15px;
   border: none;
