--- a/global.style.css
+++ b/global.style.css
@@ -141,6 +141,7 @@ button,
   border: none;
   border-radius: 50px;
   margin-block: 10px;
+  transition: ease-in-out 0.3s;
 }
 
 button.primary,
@@ -148,6 +149,15 @@ button.primary,
   color: #000000;
   background-color: var(--custom-color-brand);
   border: none;
+}
+
+button.secondary {
+  background-color: #eaeaea;
+  color: black;
+}
+
+button:hover {
+  opacity: 0.7;
 }
 
 /* User Card */
