--- a/global.style.css
+++ b/global.style.css
@@ -1,7 +1,5 @@
 html,
 body {
-  --custom-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   --custom-bg-color: #101010;
   --custom-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.8);
   --custom-color: #000000;
@@ -24,6 +22,11 @@ body,
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+  background: #A39797;
 }
 
 p, div {
@@ -167,6 +170,8 @@ button:hover {
 /* User Card */
 .userCard {
   padding: 20px;
+  margin: 5px;
+  border-radius: 5px;
   cursor: pointer;
   transition: ease-in-out 0.5s;
 }
@@ -175,7 +180,24 @@ button:hover {
   background-color: rgb(234, 234, 234);
 }
 
-body {
-  background: #A39797;
-  font-family: Helvetica, Arial, Sans-Serif;
+/* Navigation */
+.peopleNav {
+  display: flex;
+  flex-direction: column;
+}
+
+.navHeader {
+  display: flex;
+  flex-direction: column;
+  position: sticky;
+  top: 0;
+  background-color: white;
+}
+
+/* Logo */
+.logo {
+  border-radius: 5px;
+  position: relative;
+  left: 20px;
+  top: 20px;
 }
