Solved minor styling issues. Started modularising css.

--- a/global.style.css
+++ b/global.style.css
@@ -29,6 +29,13 @@ body {
   background: #A39797;
 }
 
+.globalContainer {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+}
+
 p, div {
   line-height: 1.4;
 }
